# example-using-python-template

./: .pre-commit-config.yaml  .python-version  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
example_using_python_template/: main.py
tests/: test_main.py
