[tool.poetry]
name = "example-using-python-template"
version = "0.1.0"
description = ""
authors = ["Shane O'Connell <shaneoconnell@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
mypy = "^1.8.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
setuptools = "^69.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
