[tool.poetry]
name = "example-using-python-template"
version = "0.1.0"
description = ""
authors = ["Shane O'Connell <shaneoconnell@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.6"
requests = "^2.31.0"
mypy = "^1.8.0"
flake8 = "^7.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"


[tool.poetry.group.lint.dependencies]
setuptools = "^69.0.3"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
